# ChangeLog for app-emulation/q4wine
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  Dropped cmake from RDEPEND

  06 Oct 2009; Markos Chandras <hwoarang@gentoo.org> q4wine-9999.ebuild,
  +metadata.xml:
  New -9999 ebuild according to recent changes

  09 May 2009; Markos Chandras <hwoarang@gentoo.org>
  -q4wine-0.112-r1.ebuild:
  On tree

  07 May 2009; Markos Chandras <hwoarang@gentoo.org> q4wine-0.112-r1.ebuild:
  Fixed S variable

*q4wine-0.112-r1 (06 May 2009)

  06 May 2009; Markos Chandras <hwoarang@gentoo.org> -q4wine-0.112.ebuild,
  +q4wine-0.112-r1.ebuild:
  Version bump

  05 May 2009; Markos Chandras <hwoarang@gentoo.org> q4wine-0.112.ebuild,
  q4wine-9999.ebuild:
  Make icoutils dependency optional

*q4wine-0.112 (05 May 2009)

  05 May 2009; Markos Chandras <hwoarang@gentoo.org> +q4wine-0.112.ebuild,
  q4wine-9999.ebuild:
  Version bump, fix live ebuild accordingly

  08 Apr 2009; Maciej Mrozowski (reavertm) <reavertm@poczta.fm>
  q4wine-9999.ebuild:
  26 Mar 2009; Markos Chandras <hwoarang@gentoo.org> q4wine-9999.ebuild:
  Use default cmake-utils src_install , dropping make_desktop_entry

  25 Mar 2009; Markos Chandras <hwoarang@gentoo.org> -q4wine-0.111.ebuild:
  Removing as i added it on tree

*q4wine-0.111 (21 Feb 2009)

  21 Feb 2009; Markos Chandras <hwoarang@gentoo.org> -q4wine-0.110.ebuild,
  +q4wine-0.111.ebuild:
  version bump, remove old

*q4wine-9999 (20 Feb 2009)

  20 Feb 2009; Markos Chandras <hwoarang@gentoo.org> +q4wine-9999.ebuild:
  Adding q4wine live ebuild

  09 Feb 2009; Markos Chandras <hwoarang@gentoo.org> q4wine-0.110.ebuild:
  Use cmake build system, ebuild clean up

*q4wine-0.110 (09 Feb 2009)

  09 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  -q4wine-0.109-r1.ebuild, +q4wine-0.110.ebuild:
  version bump

  02 Feb 2009; Markos Chandras (hwoarang) <hwoarang@silverarrow.gr>
  app-emulation/q4wine/q4wine-0.109-r1.ebuild:
  Use qt4-edge eclass
