@@ -1,3 +1,3 @@
-EBUILD q4wine-9999.ebuild 1108 RMD160 bb89211496cfa6670d683a1f637a9746e06c6d1b SHA1 454b1d298dc024b109a5499e3ac8d6c104175a77 SHA256 f12c953211fb8bd85a58ceaf5d616cde65825cb75d47a63c6690247cb2873562
-MISC ChangeLog 2215 RMD160 c2726e125fb2f906264a1f471df6c21bf06821d6 SHA1 df83de3b1ea16f25a2a698640925b249ff6940b7 SHA256 2b90af2cb159244f96d77dfb197ef63f3e5a212953c334b87648c051fdeb52f5
+EBUILD q4wine-9999.ebuild 1138 RMD160 3a8b4899d08210bfc93d6c6ab8eb01bc1da425c1 SHA1 da174853ad0bad7c3066a20b47744da3ecd0da2e SHA256 fd0247ef5b875c64bc41eb2bf5f7ba01a8c2d0feec705004cc02bea24d96926a
+MISC ChangeLog 2328 RMD160 3aa57552078d3092616a1609fe1094627c841d51 SHA1 46debc901b702259fd39cecdca108a711f63155e SHA256 6d7560e77fcd194bc83a814f7efa8034f2567ec2a936cded1d46ba992163b01c
 MISC metadata.xml 548 RMD160 df506fc9b9bafc5a2fba22057cc3f5f7e8ad0ebd SHA1 b6b46b3e7bc89e77e954a56e80dc2a4a1d175c61 SHA256 d069d3db7c792717c832dd6d7f2f82cf740c6cab15fe278d2951ee45c520d098
