@@ -4,6 +4,9 @@
 
   Dropped cmake from RDEPEND
 
+  06 Oct 2009; Markos Chandras <hwoarang@gentoo.org> q4wine-9999.ebuild:
+  Add debug use dep on Qt dependencies
+
   06 Oct 2009; Markos Chandras <hwoarang@gentoo.org> q4wine-9999.ebuild,
   +metadata.xml:
   New -9999 ebuild according to recent changes
